primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleanser</fullName>
            </value>
            <value>
                <fullName>Toner</fullName>
            </value>
            <value>
                <fullName>Serum</fullName>
            </value>
            <value>
                <fullName>Moisturizer</fullName>
            </value>
            <value>
                <fullName>Sunscreen</fullName>
            </value>
            <value>
                <fullName>Mask</fullName>
            </value>
            <value>
                <fullName>Exfoliant</fullName>
            </value>
            <value>
                <fullName>Eye Care</fullName>
            </value>
            <value>
                <fullName>Lip Care</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Lipstick</fullName>
            </value>
            <value>
                <fullName>Mascara</fullName>
            </value>
            <value>
                <fullName>Blush</fullName>
            </value>
            <value>
                <fullName>Fragrance</fullName>
            </value>
            <value>
                <fullName>Shampoo</fullName>
            </value>
            <value>
                <fullName>Conditioner</fullName>
            </value>
            <value>
                <fullName>Spot Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>