primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Product2/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <label>Concerns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Dryness</fullName>
            </value>
            <value>
                <fullName>Hyperpigmentation</fullName>
            </value>
            <value>
                <fullName>Sensitivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>