primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Product2/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <label>In Stock</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>