primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Product2/fields/Is_Travel__c.field-meta.xml
<CustomField>
    <fullName>Is_Travel__c</fullName>
    <label>Is Travel Size</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>