primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Product2/fields/Skin_Types__c.field-meta.xml
<CustomField>
    <fullName>Skin_Types__c</fullName>
    <label>Skin Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Oily</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Acne-Prone</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>